allow to ignore some tables when dumping

--- a/spec/fixtures/config/dbmanager_override.yml
+++ b/spec/fixtures/config/dbmanager_override.yml
@@ -1,6 +1,13 @@
 beta:
   host: 345.345.345.345
   protected: true
+  ignoretables:
+    - view0
 
 production:
   protected: false
+
+test:
+  ignoretables:
+    - view0
+    - view1
