--- a/spec/dummy/.gitignore
+++ b/spec/dummy/.gitignore
@@ -10,6 +10,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore db structure dump. It is created by cucumber.
+db/structure.sql
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
