--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'dbmanager', :path => '..'
+gem 'dbmanager', :path => '../..'
 gem 'rails', '3.2.5'
 gem 'mysql2'
 gem 'jquery-rails'
